<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="instruction">Tap Buttons to Change Count</string>
    <string name="min_label">Min</string>
    <string name="count_label">Count</string>
    <string name="max_label">Max</string>
    <string name="increment">Increment</string>
    <string name="decrement">Decrement</string>
    <string name="reset">Reset</string>
    <string name="app_name">Demo_Settings</string>
    <string name="exit">Exit</string>
    <string name="dialog_adjust_step">Adjust Step</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="exit_alert_title">Exit!</string>
    <string name="exit_alert_message">Do you really want to exit?</string>
    <string name="vibrate_on_max_summary">When count excedes min/max range</string>
    <string name="pref_min_title">Minimum</string>
    <string name="pref_max_title">Maximum</string>
    <string name="pref_min_summary">The minimum allowed value for the count</string>
    <string name="pref_max_summary">The maximum allowed value for the count</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="done">Done</string>

    <string-array name="pref_min_entries">
        <item>"-3"</item>
        <item>"-4"</item>
        <item>"-5"</item>
        <item>"-6"</item>
        <item>"-7"</item>
    </string-array>
    <string-array name="pref_max_entries">
        <item>"7"</item>
        <item>"6"</item>
        <item>"5"</item>
        <item>"4"</item>
        <item>"3"</item>
    </string-array>
    <string-array name="pref_min_entryValues">
        <item>"-3"</item>
        <item>"-4"</item>
        <item>"-5"</item>
        <item>"-6"</item>
        <item>"-7"</item>
    </string-array>
    <string-array name="pref_max_entryValues">
        <item>"7"</item>
        <item>"6"</item>
        <item>"5"</item>
        <item>"4"</item>
        <item>"3"</item>
    </string-array>

</resources>
